--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
     implementation 'com.github.zfman:TimetableView:v2.0.7'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 }
