--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,10 +34,12 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.blankj:utilcodex:1.28.0'
-    implementation 'org.projectlombok:lombok:1.18.12'
+    compileOnly 'org.projectlombok:lombok:1.18.12'
+    annotationProcessor 'org.projectlombok:lombok:1.18.12'
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'android.arch.navigation:navigation-fragment:1.0.0'
     implementation 'android.arch.navigation:navigation-ui:1.0.0'
     implementation 'com.github.zfman:TimetableView:v2.0.7'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'androidx.preference:preference:1.1.1'
 }
