--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,9 +8,26 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".activities.RegisterActivity" android:theme="@style/AppTheme.Dark"/>
-        <activity android:name=".activities.LoginActivity" android:theme="@style/AppTheme.Dark"/>
+        android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".activities.AddCourseActivity"></activity>
+        <activity
+            android:name=".activities.ChangePasswordActivity"
+            android:label="修改密码" />
+        <activity
+            android:name=".activities.AboutActivity"
+            android:label="关于" />
+        <activity
+            android:name=".activities.FeedbackActivity"
+            android:label="反馈" />
+        <activity
+            android:name=".activities.SettingActivity"
+            android:label="设置" />
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:theme="@style/AppTheme.Dark" />
+        <activity
+            android:name=".activities.LoginActivity"
+            android:theme="@style/AppTheme.Dark" />
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
