--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".activities.AddCourseActivity"></activity>
+        <activity
+            android:name=".activities.AddCourseActivity"
+            android:label="添加课程" />
         <activity
             android:name=".activities.ChangePasswordActivity"
             android:label="修改密码" />
