--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     implementation 'com.github.zfman:TimetableView:v2.0.7'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'androidx.preference:preference:1.1.1'
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
